--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.alhambra">
 
-    <!--Permisos Camara-->
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- Permisos Camara -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,15 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Storytelling"
-            android:parentActivityName=".MainActivity">
-        </activity>
-        <activity android:name=".War"
-            android:parentActivityName=".MainActivity">
-        </activity>
-        <activity android:name=".PuzzleActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
+        <activity
+            android:name=".MakingPuzzleActivity"></activity>
+        <activity
+            android:name=".Storytelling"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".War"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".PuzzleActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".SplashScreenActivity"
             android:noHistory="true"
@@ -38,6 +41,15 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
     </application>
 
 </manifest>
