Añado fotos y reseñas sobre monumentos en el Storytelling

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:parentActivityName=".PuzzleActivity" />
         <activity
             android:name=".Storytelling"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".War"
